# wb-country-stats

./: README.md  mise.toml  pyproject.toml
src/wb_country_stats/: cli.py  core.py
